Add captcha+routing hardening and pre-order page

--- a/env.example
+++ b/env.example
@@ -38,3 +38,20 @@ FRONTEND_BASE_URL=http://localhost:8080
 # API Documentation
 DOCS_URL=/docs
 REDOC_URL=/redoc
+
+# Public Form Hardening
+PUBLIC_FORM_RATE_LIMIT=5
+PUBLIC_FORM_RATE_WINDOW_SECONDS=600
+CLIENT_ERROR_RATE_LIMIT=20
+CLIENT_ERROR_RATE_WINDOW_SECONDS=60
+
+# Captcha (set CAPTCHA_SECRET_KEY when deploying to production)
+CAPTCHA_PROVIDER=hcaptcha
+CAPTCHA_VERIFY_URL=https://hcaptcha.com/siteverify
+CAPTCHA_SECRET_KEY=
+CAPTCHA_REQUIRED_FOR_PUBLIC_FORMS=false
+
+# Observability
+SENTRY_DSN=
+SENTRY_TRACES_SAMPLE_RATE=0.1
+SENTRY_PROFILES_SAMPLE_RATE=0.05
