--- a/env.production.example
+++ b/env.production.example
@@ -56,3 +56,20 @@ REDOC_URL=
 # EMAIL_PROVIDER=sendgrid
 # EMAIL_API_KEY=your-deprecated-email-api-key
 # EMAIL_FROM_NAME=Orbsurv
+
+# Public Form Hardening
+PUBLIC_FORM_RATE_LIMIT=5
+PUBLIC_FORM_RATE_WINDOW_SECONDS=600
+CLIENT_ERROR_RATE_LIMIT=60
+CLIENT_ERROR_RATE_WINDOW_SECONDS=60
+
+# Captcha (REQUIRED in production)
+CAPTCHA_PROVIDER=hcaptcha
+CAPTCHA_VERIFY_URL=https://hcaptcha.com/siteverify
+CAPTCHA_SECRET_KEY=REPLACE_WITH_YOUR_HCAPTCHA_SECRET
+CAPTCHA_REQUIRED_FOR_PUBLIC_FORMS=true
+
+# Observability
+SENTRY_DSN=REPLACE_WITH_YOUR_SENTRY_DSN
+SENTRY_TRACES_SAMPLE_RATE=0.2
+SENTRY_PROFILES_SAMPLE_RATE=0.1
