--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,10 @@ gunicorn==21.2.0
 SQLAlchemy==2.0.23
 psycopg2-binary==2.9.9
 asyncpg==0.28.0
+aiosqlite==0.20.0
 alembic==1.12.1
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 python-jose[cryptography]==3.3.0
 pydantic-settings==2.1.0
 redis==5.0.1
@@ -16,3 +18,4 @@ pytest-asyncio==0.23.2
 black==23.12.1
 ruff==0.1.9
 mypy==1.7.1
+sentry-sdk==1.39.1
